force-app/main/default/objects/Participants__c/Participants__c.object-meta.xml
<CustomObject>
    <description>SMILE Participants formations</description>
    <label>Participant</label>
    <nameField>
        <label>Participants</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>