force-app/main/default/objects/Participants__c/fields/Matricule_participant__c.field-meta.xml
<CustomField>
    <fullName>Matricule_participant__c</fullName>
    <description>Numéro du participant</description>
    <displayFormat>P-{0000}</displayFormat>
    <label>Matricule participant</label>
    <type>AutoNumber</type>
</CustomField>