force-app/main/default/objects/Participants__c/fields/Nom_du_participant__c.field-meta.xml
<CustomField>
    <fullName>Nom_du_participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nom du participant</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ParticipantS</relationshipName>
    <type>Lookup</type>
</CustomField>