force-app/main/default/objects/Participants__c/fields/SESSION_MDR__c.field-meta.xml
<CustomField>
    <fullName>SESSION_MDR__c</fullName>
    <label>Session formation SMILE</label>
    <referenceTo>Session_SMILE__c</referenceTo>
    <relationshipLabel>ParticipantS (Session formation SMILE)</relationshipLabel>
    <relationshipName>ParticipantS1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>