force-app/main/default/objects/Participants__c/fields/SESSION_Test__c.field-meta.xml
<CustomField>
    <fullName>SESSION_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Date de session</description>
    <label>SESSION_Test</label>
    <referenceTo>Session_SMILE__c</referenceTo>
    <relationshipLabel>ParticipantS</relationshipLabel>
    <relationshipName>ParticipantS</relationshipName>
    <type>Lookup</type>
</CustomField>