force-app/main/default/objects/Participants__c/fields/Statut_de_pr_sence__c.field-meta.xml
<CustomField>
    <fullName>Statut_de_pr_sence__c</fullName>
    <label>Statut de présence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Présent</fullName>
            </value>
            <value>
                <fullName>Absent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>